eks/eks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: demo-deployment
  name: demo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eksdemo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: eksdemo
    spec:
      containers:
      - image: 249586058154.dkr.ecr.ap-southeast-1.amazonaws.com/demo-repo:latest
        name: demo-repo
        ports:
          - containerPort: 8080
