eks/eks-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: demo-service
  name: demo-service
spec:
  ports:
  - nodePort: 31479 #external traffic
    port: 8081 # port of this service for cluster members 
    targetPort: 8080 #where container is actually running
  selector:
    app: eksdemo
  type: NodePort
status:
  loadBalancer: {}
