eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: my-ingress

spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: demo-service
            port:
              number: 8081
        path: /
        pathType: Prefix
